Añadidas las fotos de las últimas recetas. Actualizados los datos. Completada la carga de datos a falta de revisión y el visto bueno.

--- a/mongodump/exported_json/webapp_profile.json
+++ b/mongodump/exported_json/webapp_profile.json
@@ -30,13 +30,6 @@
                 "username": "alex"
             },
             {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
-            },
-            {
                 "display_name": "Virgi",
                 "user_id": {
                     "$oid": "53524b1bc54d2d0800ca5bbe"
@@ -92,13 +85,6 @@
                 "username": "alex"
             },
             {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
-            },
-            {
                 "display_name": "Virgi",
                 "user_id": {
                     "$oid": "53524b1bc54d2d0800ca5bbe"
@@ -151,13 +137,6 @@
                 "username": "juanma"
             },
             {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
-            },
-            {
                 "display_name": "Alex",
                 "user_id": {
                     "$oid": "533fb9b386c9bdaca925fee0"
@@ -203,13 +182,6 @@
                 "username": "juan"
             },
             {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
-            },
-            {
                 "display_name": "Juanma",
                 "user_id": {
                     "$oid": "53511955b88bbe11b48fcdd7"
@@ -248,7 +220,7 @@
         "additional_languages": [
             "en"
         ],
-        "avatar": null,
+        "avatar": "images/alexis.persist.jpg",
         "birth_date": {
             "$date": 687139200000
         },
@@ -260,13 +232,6 @@
                     "$oid": "5337f4b4144115cb2ce71e1e"
                 },
                 "username": "franhg"
-            },
-            {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
             },
             {
                 "display_name": "Juhani L.",
@@ -300,7 +265,7 @@
         "additional_languages": [
             "en"
         ],
-        "avatar": "images/paisaje.persist.jpg",
+        "avatar": "images/james.persist.jpg",
         "birth_date": {
             "$date": 687139200000
         },
@@ -319,13 +284,6 @@
                     "$oid": "533fb9b386c9bdaca925fee0"
                 },
                 "username": "alex"
-            },
-            {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
             },
             {
                 "display_name": "francisco",
@@ -383,48 +341,6 @@
                     "$oid": "53524b1bc54d2d0800ca5bbe"
                 },
                 "username": "virsfc"
-            },
-            {
-                "display_name": "Juanma",
-                "user_id": {
-                    "$oid": "53511955b88bbe11b48fcdd7"
-                },
-                "username": "juanma"
-            },
-            {
-                "display_name": "francisco",
-                "user_id": {
-                    "$oid": "5337f4b4144115cb2ce71e1e"
-                },
-                "username": "francisco"
-            },
-            {
-                "display_name": "Mar\u00eda",
-                "user_id": {
-                    "$oid": "5352494f18085d15c08181d1"
-                },
-                "username": "mariarojas"
-            },
-            {
-                "display_name": "Ted",
-                "user_id": {
-                    "$oid": "5352390a18085d15c08181ce"
-                },
-                "username": "Ted"
-            },
-            {
-                "display_name": "Pedro Verd",
-                "user_id": {
-                    "$oid": "5337f440144115cb2ce71e1d"
-                },
-                "username": "pedro"
-            },
-            {
-                "display_name": "James",
-                "user_id": {
-                    "$oid": "533fba3786c9bdaca925fee1"
-                },
-                "username": "james17"
             }
         ],
         "gender": "m",
@@ -443,6 +359,58 @@
             "$oid": "533fbad086c9bdaca925fee2"
         },
         "website": "http://www.youtube.com/tomasrecetas"
+    },
+    {
+        "_id": {
+            "$oid": "53412d1e18085d03fc51b72e"
+        },
+        "additional_languages": [
+            "en"
+        ],
+        "avatar": "images/mario.persist.jpg",
+        "birth_date": {
+            "$date": 687139200000
+        },
+        "display_name": "Mario",
+        "following": [
+            {
+                "display_name": "francisco",
+                "user_id": {
+                    "$oid": "5337f4b4144115cb2ce71e1e"
+                },
+                "username": "franhg"
+            },
+            {
+                "display_name": "Juhani L.",
+                "user_id": {
+                    "$oid": "5337f3cb144115cb2ce71e1c"
+                },
+                "username": "juan"
+            },
+            {
+                "display_name": "Alex",
+                "user_id": {
+                    "$oid": "533fb9b386c9bdaca925fee0"
+                },
+                "username": "alex"
+            }
+        ],
+        "gender": "m",
+        "karma": 6,
+        "location": "Madrid",
+        "main_language": "en",
+        "modification_date": null,
+        "tastes": {
+            "bitter": 60,
+            "salty": 50,
+            "sour": 10,
+            "spicy": 20,
+            "sweet": 90
+        },
+        "user_id": {
+            "$oid": "53412d1e18085d03fc51b72d"
+        },
+        "website": "http://www.kosovonomola.com/"
     },
     {
         "_id": {
@@ -511,7 +479,22 @@
             "$date": 605750400000
         },
         "display_name": "Ted",
-        "following": [],
+        "following": [
+            {
+                "display_name": "Juanma",
+                "user_id": {
+                    "$oid": "53511955b88bbe11b48fcdd7"
+                },
+                "username": "juanma"
+            },
+            {
+                "display_name": "Juhani L.",
+                "user_id": {
+                    "$oid": "5337f3cb144115cb2ce71e1c"
+                },
+                "username": "juan"
+            }
+        ],
         "gender": "unknown",
         "karma": 6,
         "location": "London",
@@ -601,84 +584,6 @@
         },
         "user_id": {
             "$oid": "53524b1bc54d2d0800ca5bbe"
-        },
-        "website": ""
-    },
-    {
-        "_id": {
-            "$oid": "5354fccc18085d1b70f96c44"
-        },
-        "additional_languages": [],
-        "avatar": "images/photo.jpg",
-        "birth_date": null,
-        "display_name": "Cocinillas.es",
-        "following": [],
-        "gender": "unknown",
-        "karma": 6,
-        "location": "",
-        "main_language": "es",
-        "modification_date": null,
-        "tastes": {
-            "bitter": 50,
-            "salty": 50,
-            "sour": 50,
-            "spicy": 50,
-            "sweet": 50
-        },
-        "user_id": {
-            "$oid": "5354fccc18085d1b70f96c43"
-        },
-        "website": ""
-    },
-    {
-        "_id": {
-            "$oid": "53558989b88bbe10d0809639"
-        },
-        "additional_languages": [],
-        "avatar": "",
-        "birth_date": null,
-        "display_name": "Roberto",
-        "following": [],
-        "gender": "unknown",
-        "karma": 6,
-        "location": "",
-        "main_language": "en",
-        "modification_date": null,
-        "tastes": {
-            "bitter": 50,
-            "salty": 50,
-            "sour": 50,
-            "spicy": 50,
-            "sweet": 50
-        },
-        "user_id": {
-            "$oid": "53558989b88bbe10d0809638"
-        },
-        "website": ""
-    },
-    {
-        "_id": {
-            "$oid": "53558a6fb88bbe10d080963b"
-        },
-        "additional_languages": [],
-        "avatar": "images/kiko.persist.jpg",
-        "birth_date": null,
-        "display_name": "Kiko",
-        "following": [],
-        "gender": "m",
-        "karma": 6,
-        "location": "Madrid",
-        "main_language": "en",
-        "modification_date": null,
-        "tastes": {
-            "bitter": 50,
-            "salty": 50,
-            "sour": 50,
-            "spicy": 50,
-            "sweet": 50
-        },
-        "user_id": {
-            "$oid": "53558a6fb88bbe10d080963a"
         },
         "website": ""
     }
